Generator.Tests.Abstraction/TestCases/InvalidTypeConversion/Composition2/InvalidTypeConversionFromEntity2.cs
using System;

namespace Paukertj.Autoconverter.Generator.Tests.Abstraction.TestCases.InvalidTypeConversion.Composition1
{
    public class InvalidTypeConversionFromEntity2
    {
        public Guid? Property { get; set; }
    }
}
